# candemonium

./: .gitignore  CHANGELOG.md  Cargo.toml
.github/: get-release-notes.sh
.github/workflows/: lint.yml  release.yml
candumpr/: Cargo.toml
candumpr/benches/: recv_contention.rs  recv_cost.rs  recv_impact.rs
candumpr/benches/common/: mod.rs
candumpr/examples/: dump.rs
candumpr/src/: can.rs  errframe.rs  format.rs  frame.rs  lib.rs  main.rs  pipeline.rs  sink.rs
candumpr/src/recv/: dedicated.rs  epoll.rs  mod.rs  netlink.rs  receiver.rs  recvmmsg.rs  uring_multi.rs
candumpr/src/recv/backends/: uring_multi.rs
candumpr/src/writer/: mod.rs
candumpr/tests/: format.rs  link.rs  recv.rs  smoke.rs
docs/design/: 04-benchmark-results.md  05-testing-strategy.md
docs/design/candumpr/: 01-goals.md  02-architecture.md  03-benchmarks.md  04-configuration.md
vcan-fixture/: Cargo.toml
vcan-fixture/src/: bench.rs  lib.rs  netlink.rs
