[package]
name = "candumpr"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Log CAN traffic from multiple networks"

[features]
ci = []

[dependencies]
eyre.workspace = true
io-uring.workspace = true
libc.workspace = true

[dev-dependencies]
ctor.workspace = true
tabled.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vcan-fixture = { path = "../vcan-fixture" }

[[bench]]
name = "recv_impact"
harness = false
