[package]
name = "vcan-fixture"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Build vcan interfaces in isolated network namespaces"

[features]
ci = []

[dependencies]
ctor.workspace = true
eyre.workspace = true
libc.workspace = true
neli.workspace = true
